# rdom

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  STATE.md
crates/rdom-core/: Cargo.toml  README.md
crates/rdom-core/benches/: arena.rs
crates/rdom-core/examples/: mutation_observer.rs  tree_builder.rs
crates/rdom-core/src/: abort.rs  accessor.rs  attrs.rs  clone.rs  dispatch.rs  dom.rs  dom_string_map.rs  error.rs  event.rs  event_detail.rs  html_collection.rs  indexes.rs  insert_adjacent.rs  lib.rs  markup.rs  node.rs  node_id.rs  node_list.rs  node_or_string.rs  observer.rs  position.rs  query.rs  query_selector.rs  selection.rs  selectors.rs  text.rs  token_list.rs  tree.rs  validate.rs
crates/rdom-core/tests/: fuzz_invariants.rs  phase3_mixed_content.rs
crates/rdom-css/: Cargo.toml  README.md
crates/rdom-css/examples/: css_parser_demo.rs  positioning_demo.rs  transitions_demo.rs
crates/rdom-css/src/: declarations.rs  lib.rs  top_level.rs
crates/rdom-css/tests/: calc_parsing.rs  colors.rs  custom_properties.rs  important.rs  inline_style.rs  lengths.rs  padding_shorthand.rs  positioning.rs  properties.rs  round_trip.rs  tokenizer.rs  transitions.rs
crates/rdom-css/tests/integration/: calc_parsing.rs  display_flow.rs  main.rs  padding_shorthand.rs  properties.rs  round_trip.rs  selectors.rs  strict.rs
crates/rdom-parser/: Cargo.toml  README.md
crates/rdom-parser/examples/: parse_html.rs  round_trip.rs
crates/rdom-parser/src/: dom_ext.rs  error.rs  lib.rs  parser.rs
crates/rdom-parser/tests/: integration.rs
crates/rdom-showcase/: Cargo.toml
crates/rdom-showcase/src/: demo.rs  lib.rs  main.rs  nav.rs  registry.rs  shell.rs  status_bar.rs
crates/rdom-showcase/src/demos/: app_shell.rs  border_collapse.rs  counter_button.rs  dom_api.rs  flex_row.rs  headings.rs  hello.rs  hover.rs  inline_formatting.rs  interval_counter.rs  mod.rs  mutation_observer.rs  parse_and_render.rs  permission_dialog.rs  raf_progress.rs  scrollable_list.rs  selectable_text.rs  sticky.rs  tab_form.rs  transition_box.rs  ua_chrome.rs  whitespace_modes.rs
crates/rdom-showcase/tests/: chrome_dump.rs  keyboard_nav.rs  mutation_observer_demo.rs  resize_integration.rs  scaffold.rs  scroll_indicator.rs  subtree_swap_integration.rs
crates/rdom-showcase/tests/integration/: chrome_layout_contract.rs  details_toggle_regression.rs  keyboard_nav.rs  main.rs  scaffold.rs  scroll_indicator.rs  scrollable_list_hover_regression.rs  scrollable_list_wheel_regression.rs  sidebar_scroll_end_regression.rs  status_bar_renders.rs  subtree_swap_integration.rs
crates/rdom-style/: Cargo.toml  README.md
crates/rdom-style/src/: calc.rs  color.rs  computed.rs  layout.rs  lib.rs  modifier.rs  property_dispatch.rs  specificity.rs  stylesheet.rs  transition.rs  tui_color.rs  tui_style.rs  ua.rs  value.rs
crates/rdom-style/src/color/: named.rs
crates/rdom-style/src/parse/: cursor.rs  mod.rs  token.rs  values.rs
crates/rdom-tui/: Cargo.toml  README.md  build.rs
crates/rdom-tui/benches/: block_layout.rs  runtime.rs
crates/rdom-tui/examples/: app_shell.rs  border_collapse_demo.rs  counter_button.rs  dom_api_demo.rs  parse_and_render.rs  scrollable_list.rs  selectable_text.rs  sticky_demo.rs  tab_form.rs  ua_chrome.rs
crates/rdom-tui/src/: ext.rs  lib.rs  node.rs  prelude.rs
crates/rdom-tui/src/accessors/: doc.rs  helpers.rs  mod.rs  read_mut.rs  read_ref.rs  tests.rs  write.rs
crates/rdom-tui/src/cssom/: aliases.rs  apply.rs  declaration.rs  mod.rs  observer.rs  reentry.rs
crates/rdom-tui/src/editing/: mod.rs
crates/rdom-tui/src/render/: backend.rs  backend_crossterm.rs  buffer.rs  cell.rs  compose.rs  mod.rs  rect.rs  render_context.rs  sgr.rs  style.rs  terminal.rs  virtual_screen.rs
crates/rdom-tui/src/render/inline/: mod.rs  packer.rs  tests.rs
crates/rdom-tui/src/render/layout_pass/: block.rs  block_tests.rs  ifc.rs  (+7 more)
crates/rdom-tui/src/runtime/: animation.rs  implicit_events.rs  mod.rs  timers.rs  trace.rs
crates/rdom-tui/src/style/: dirty_tracker.rs  mod.rs
crates/rdom-tui/src/tui_event/: key_translate.rs  mod.rs
crates/rdom-tui/tests/: animations_demos_snapshot.rs  app_shell_snapshot.rs  border_collapse_snapshot.rs  button_flex_repro.rs  calc_layout.rs  counter_button_snapshot.rs  cssom_cascade.rs  dom_api_snapshot.rs  implicit_detach_events.rs  input_render_integration.rs  mutation_observer_snapshot.rs  nested_collapse_content_inset.rs  parse_and_render_snapshot.rs  scrollable_list_snapshot.rs  seed_inline_styles.rs  select_render_integration.rs  selectable_text_snapshot.rs  sticky_snapshot.rs  style_tags.rs  subtree_replacement_contract.rs  tab_form_snapshot.rs  text_demos_snapshot.rs  textarea_integration.rs  transparent_collapse_propagation.rs  ua_chrome_snapshot.rs
crates/rdom-tui/tests/integration/: animations_demos_snapshot.rs  app_shell_snapshot.rs  append_text_reflows_layout.rs  bfc_cascade.rs  border_collapse_snapshot.rs  border_model_contract.rs  button_flex_repro.rs  calc_layout.rs  counter_button_snapshot.rs  dom_api_snapshot.rs  flex_blockifies_inline_children.rs  flex_shorthand.rs  flex_shrink.rs  flex_two_slot_layout.rs  implicit_detach_events.rs  inline_flow.rs  input_render_integration.rs  m5_abortsignal.rs  main.rs  mutation_observer_snapshot.rs  nested_collapse_content_inset.rs  nested_collapse_root_opacity.rs  padding_box_paint_clip.rs  parse_and_render_snapshot.rs  percent_units.rs  scrollable_list_snapshot.rs  select_render_integration.rs  selectable_text_snapshot.rs  sticky_snapshot.rs  tab_form_integration.rs  tab_form_snapshot.rs  text_demos_snapshot.rs  textarea_integration.rs  transparent_collapse_propagation.rs  ua_chrome_snapshot.rs
crates/rdom-tui/tests/snapshots/: app_shell.snap  border_collapse.snap  counter_button.snap  dom_api.snap  headings.snap  inline_formatting.snap  interval_counter.snap  mutation_observer.snap  parse_and_render.snap  raf_progress.snap  scrollable_list.snap  selectable_text.snap  sticky.snap  tab_form.snap  transition_box.snap  ua_chrome.snap  whitespace_modes.snap
(+94 files in other folders)
