[package]
name = "rdom-showcase"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-tree TUI app demonstrating every rdom primitive. Permanent dogfooding fixture; not published."
publish = false

[[bin]]
name = "rdom-showcase"
path = "src/main.rs"

[dependencies]
# `rdom-tui` re-exports the public surface of `rdom-core` and
# `rdom-style`, so depend only on the renderer + the CSS parser.
# This matches the consumer-facing dependency shape we want demos
# to teach.
rdom-tui = { path = "../rdom-tui", version = "0.1.0" }
rdom-css = { path = "../rdom-css", version = "0.1.0" }
# `parse_and_render` demo uses the HTML-ish parser; one of the
# few demos that touch all three crates composing.
rdom-parser = { path = "../rdom-parser", version = "0.1.0" }
